testdata/baselines/reference/submodule/conformance/errorOnFunctionReturnType.errors.txt
foo.js(21,5): error TS2322: Type '() => void' is not assignable to type 'FunctionReturningPromise'.
  Type 'void' is not assignable to type 'Promise<number>'.
foo.js(45,5): error TS2322: Type '() => void' is not assignable to type 'FunctionReturningNever'.
  Type 'void' is not assignable to type 'never'.


==== foo.js (2 errors) ====
    /**
     * @callback FunctionReturningPromise
     * @returns {Promise<number>}
     */
    
    /** @type {FunctionReturningPromise} */
    function testPromise1() {
        console.log("Nope");
    }
    
    /** @type {FunctionReturningPromise} */
    async function testPromise2() {
        return "asd";
    }
    
    var testPromise3 = /** @type {FunctionReturningPromise} */ function() {
        console.log("test")
    }
    
    /** @type {FunctionReturningPromise} */
    var testPromise4 = function() {
        ~~~~~~~~~~~~
!!! error TS2322: Type '() => void' is not assignable to type 'FunctionReturningPromise'.
!!! error TS2322:   Type 'void' is not assignable to type 'Promise<number>'.
        console.log("test")
    }
    
    /**
     * @callback FunctionReturningNever
     * @returns {never}
     */
    
    /** @type {FunctionReturningNever} */
    function testNever1() {
    
    }
    
    /** @type {FunctionReturningNever} */
    async function testNever2() {
        return "asd";
    }
    
    var testNever3 = /** @type {FunctionReturningNever} */ function() {
        console.log("test")
    }
    
    /** @type {FunctionReturningNever} */
    var testNever4 = function() {
        ~~~~~~~~~~
!!! error TS2322: Type '() => void' is not assignable to type 'FunctionReturningNever'.
!!! error TS2322:   Type 'void' is not assignable to type 'never'.
        console.log("test")
    }